tijo-bmi, code review, refaktoryzacja kodu (rekordy w java, poprawa styli)